Nuevo codigo fuente y build de la version 1.0.0

--- a/source/configuracion/ui/proyectosba/index.html
+++ b/source/configuracion/ui/proyectosba/index.html
@@ -13,6 +13,7 @@
     <base href="/">
 </head>
 <body>
+<errormodaldisplay></errormodaldisplay>
 <div ui-view="baheader"></div>
 <footer>
     <div class="footer">
