--- a/source/frontend/src/home/home.html
+++ b/source/frontend/src/home/home.html
@@ -9,8 +9,8 @@
                 <div style="clear:both;"></div>
                 <p class="register">No hay proyectos cargados a&uacute;n en el Plan 2017</p>
                 <div class="content-first-btn principalBtn">
-                    <button type="button" class="btn btn-default" ui-sref="upload">Importar proyectos de Excel</button>
-                    <button type="button" class="btn btn-default" ui-sref="home.tree">Agregar proyectos en forma manual</button>
+                    <button type="button" class="btn btn-success" ui-sref="upload">Importar proyectos de Excel</button>
+                    <button type="button" class="btn btn-success" ui-sref="home.tree">Agregar proyectos en forma manual</button>
                 </div>
             </div>
         </div>
