--- a/source/frontend/src/login/login.html
+++ b/source/frontend/src/login/login.html
@@ -19,7 +19,7 @@
                   </div>
                   <div class="form-group">
                    
-                    <input type="password" class="form-control" id="InputPasword" placeholder="Ingresar Contraseña" ng-model="loginCtrl.password" required>
+                    <input type="password" class="form-control" id="InputPasword" placeholder="Ingresar contraseña" ng-model="loginCtrl.password" required>
                     <label for="InputPasword">Contraseña</label>
                   </div>
                   <div class="form-group" ng-show="loginCtrl.numberOfAttempts >= loginCtrl.maxNumberOfAttempts">
