--- a/source/frontend/index.html
+++ b/source/frontend/index.html
@@ -14,6 +14,7 @@
     <base href="/">
 </head>
 <body>
+<errormodaldisplay></errormodaldisplay>
 <div ui-view="baheader"></div>
 <footer>
     <div class="footer">
