--- a/source/frontend/src/cross-topics/cross-topics.html
+++ b/source/frontend/src/cross-topics/cross-topics.html
@@ -3,8 +3,11 @@
     <div class="row">
       <div class="col-md-12" id="alertmodalcomponent">
         <div class="row">
-          <div class="col-lg-9 col-md-8 col-sm-4 col-xs-12">
-            <button type="button" class="btn btn-default" ng-click="crossTopicsCtrl.addCrossTopic()"><i class="glyphicon glyphicon-plus" aria-hidden="true"></i> Agregar Nuevo</button>
+          <div class="col-lg-9 col-md-8 col-sm-4 col-xs-12 addBtn">
+            <button type="button" class="btn btn-default" ng-click="crossTopicsCtrl.addCrossTopic()">
+              <div class="icNew" title="Agregar"></div>
+              <span>Agregar nuevo</span>
+            </button>
           </div>
           <div class="col-lg-3 col-md-4 col-sm-8 col-xs-12">
             <div class="form-group has-button contentSearch searchPage">
@@ -15,7 +18,7 @@
             </div>
           </div>
           <div class="col-md-12">
-            <hr>
+            <hr class="lineColor">
             <div id="newcrosstopic">
             </div>
           </div>
@@ -41,8 +44,12 @@
                 <label for="cmn-toggle-{{crossTopic.idTemaTransversal}}"></label>
               </div>
             </td>
-            <td class="colum-action"><i class="glyphicon glyphicon-edit" aria-hidden="true" title="Editar" data-toggle="tooltip" data-placement="top" title="" data-original-title="Editar" ng-click="crossTopicsCtrl.editCrossTopic(crossTopic.idTemaTransversal)"></i></td>
-            <td class="colum-action"><i class="glyphicon glyphicon-remove line" aria-hidden="true" title="Editar" data-toggle="modal" data-target="#crossTopicAlert" data-original-title="Eliminar"></i></td>
+            <td class="colum-action">
+              <i class="icEdit" aria-hidden="true" title="Editar" data-toggle="tooltip" data-placement="top" title="" data-original-title="Editar" ng-click="crossTopicsCtrl.editCrossTopic(crossTopic.idTemaTransversal)"></i>
+            </td>
+            <td class="colum-action">
+              <i class="glyphicon glyphicon-remove" aria-hidden="true" title="Eliminar" data-toggle="modal" data-target="#crossTopicAlert" data-original-title="Eliminar"></i>
+            </td>
           </tr>
         </tbody>
       </table>
