--- a/source/frontend/src/home/home-tree.html
+++ b/source/frontend/src/home/home-tree.html
@@ -6,7 +6,15 @@
                 <h2 class="title-year">Plan 2017</h2>
 
                 <excelcomponent showimport="true"></excelcomponent>
-
+                <button type="button" class="btn btn-link action-collapse" ng-click="homeCtrl.collapseAll()">
+                    Colapsar todo  <i class="glyphicon glyphicon-chevron-up" aria-hidden="true"></i>
+                </button>
+                <button type="button" class="btn btn-link action-collapse" ng-click="homeCtrl.showAll()">
+                   Desplegar todo  <i class="glyphicon glyphicon-chevron-down" aria-hidden="true"></i>
+                </button>
+            </div>
+            <div class="col-md-12">
+                <hr class="lineColor">
             </div>
             <div class="col-md-12">
                 <div id="notifications"></div>
@@ -17,51 +25,54 @@
                     <button type="button" class="btn btn-default" ng-click="">
                       <i class="glyphicon glyphicon-plus" aria-hidden="true"></i> Agregar Obj. Operativo
                     </button> -->
-                    <button type="button" class="btn btn-default" ng-click="homeCtrl.addStrategicObjective(homeCtrl.jurisdiccion.idJurisdiccion)">
-                      <i class="glyphicon glyphicon-plus" aria-hidden="true"></i> Agregar Obj. Estrat&eacute;gico
-                    </button>
-                    <button type="button" class="btn btn-link action-collapse" ng-click="homeCtrl.collapseAll()">
-                    <i class="glyphicon glyphicon-chevron-up" aria-hidden="true"></i> Colapsar todo
-                  </button>
-                 <button id="showAllButton" type="button" class="btn btn-link action-collapse" ng-click="homeCtrl.showAll()">
-                    <i class="glyphicon glyphicon-chevron-down" aria-hidden="true"></i> Desplegar todo
-                  </button>
+
                 </div>
-                <hr class="lineColor">
-                <div id="add-strategic-objetive"></div>
+
+
 
                 <!-- objetivos estrategicos -->
                     <div class="alert alert-danger" ng-show="(homeCtrl.jurisdiccion.objetivosJurisdiccionales | filter:homeCtrl.search.searchText.text).length === 0">
                         <i class="glyphicon glyphicon-remove-sign" aria-hidden="true"></i> No hay resultados para mostrar de su busqueda: "{{homeCtrl.search.searchText.text}}"
                     </div>
-                    <div class="title titleOjEestrategico">Objetivos Estrat&eacute;gicos</div>
+                    <div ng-hide="(homeCtrl.jurisdiccion.objetivosJurisdiccionales | filter:homeCtrl.search.searchText.text).length === 0">
+                      <div class="title titleOjEestrategico">Objetivos Estrat&eacute;gicos</div>
+                      <div id="add-strategic-objetive"></div>
+                      <button type="button" class="btn btn-default btnNew" ng-click="homeCtrl.addStrategicObjective(homeCtrl.jurisdiccion.idJurisdiccion)">
+                        <span>Nuevo</span>
+                        <div class="icNew" title="Nuevo"></div>
+                      </button>
+                    </div>
                     <div class="col-md-12 colorObjOperativo">
                         <ul class="content-level-1" ng-repeat="objJ in homeCtrl.jurisdiccion.objetivosJurisdiccionales | filter:homeCtrl.search.searchText.text">
                             <li class="firstLabel">
                                 <span id="es-{{objJ.idObjetivoJurisdiccional}}">
                                     <div class="row">
                                         <div class="col-md-12 default-content" >
-                                            <div class="col-md-9 notPadding">
-                                                <i class="collapsed glyphicon glyphicon-chevron-down" aria-hidden="true" data-toggle="collapse" href="#grupo-level-{{objJ.idObjetivoJurisdiccional}}"></i>
-                                                {{ objJ.nombre }}
-                                                <i class="glyphicon glyphicon-edit" aria-hidden="true" title="Editar" data-toggle="tooltip" data-placement="top" title="" data-original-title="Editar" ng-click="homeCtrl.editStrategicObjective(objJ.idObjetivoJurisdiccional)"></i>
+                                            <div class="col-md-12 notPadding relativeContent">
+                                                <p class="nameObj" data-toggle="collapse" href="#grupo-level-{{objJ.idObjetivoJurisdiccional}}">{{ objJ.nombre }}
+                                                    <span class="icEdit absoluteContent" aria-hidden="true" title="Editar" data-toggle="tooltip" data-placement="top" title="" data-original-title="Editar" ng-click="homeCtrl.editStrategicObjective(objJ.idObjetivoJurisdiccional)"></span>
+                                                </p>
+                                                <i class="collapsed img-chevron-down verticalCenter" aria-hidden="true" data-toggle="collapse" href="#grupo-level-{{objJ.idObjetivoJurisdiccional}}"></i>
                                             </div>
-                                                <button type="button" class="btn btn-default btn-arbol" ng-click="homeCtrl.addOperativeObjective(objJ.idObjetivoJurisdiccional, objJ.idObjetivoJurisdiccional)">
-                                                <i class="glyphicon glyphicon-plus" aria-hidden="true"></i> Agregar Obj. Operativo
-                                                </button>
+
                                         </div>
                                     </div>
                                 </span>
 
                                 <!-- Inicio de Objetivos Operativos -->
                                 <span id="grupo-level-{{objJ.idObjetivoJurisdiccional}}" class="collapse objOContent">
-                                    <span ng-if="objJ.objetivosOperativos.length > 0" class="title viewArbol">Objetivos Operativos</span>
+                                    <div class="contentName">
+                                    <span class="title viewArbol">Objetivos Operativos</span>
+                                     <button type="button" class="btn btn-default btnNew" ng-click="homeCtrl.addOperativeObjective(objJ.idObjetivoJurisdiccional, objJ.idObjetivoJurisdiccional)">
+                                        <span>Nuevo</span>
+                                        <div class="icNew" title="Nuevo"></div>
+                                    </button>
+                                    </div>
                                     <span ng-if="objJ.objetivosOperativos.length === 0">
                                         <div class="col-md-12 col-sm-12 col-xs-12 notPadding">
                                             <br>
-                                            <div class="alert alert-danger">
-                                                <i class="glyphicon glyphicon-remove-sign" aria-hidden="true"></i>
-                                                No existen objetivos operativos para este objetivo estratégico.
+                                            <div class="notificationEmptyProject">
+                                                 No existen objetivos operativos para este objetivo estratégico.
                                             </div>
                                         </div>
                                     </span>
@@ -71,62 +82,67 @@
                                             <span id="op-{{objO.idObjetivoOperativo}}">
                                                 <div class="row content-obj">
                                                     <div class="col-md-12">
-                                                        <div class="col-md-9 col-sm-8 textObjOp notPadding">
-                                                            <i class="glyphicon glyphicon-chevron-down collapsed" aria-hidden="true" data-toggle="collapse" href="#grupo-level-2-{{objO.idObjetivoOperativo}}"></i>
-                                                            {{ objO.nombre }}
-                                                            <i class="glyphicon glyphicon-edit" aria-hidden="true" title="Editar" data-toggle="tooltip" ng-click="homeCtrl.editOperativeObjective(objO.idObjetivoOperativo)" data-placement="top" title="" data-original-title="Editar"></i>
+                                                        <div class="col-md-12 textObjOp notPadding relativeContent">
+                                                            <span class="nameObj" data-toggle="collapse" href="#grupo-level-2-{{objO.idObjetivoOperativo}}">{{ objO.nombre }}
+                                                             <span class="icEdit absoluteContent" aria-hidden="true" title="Editar" data-toggle="tooltip" ng-click="homeCtrl.editOperativeObjective(objO.idObjetivoOperativo)" data-placement="top" title="" data-original-title="Editar"></span>
+                                                             </span>
+                                                           <i class="img-chevron-down collapsed verticalCenter" aria-hidden="true" data-toggle="collapse" href="#grupo-level-2-{{objO.idObjetivoOperativo}}"></i>
                                                         </div>
-                                                        <div class="content-button">
-                                                          <button type="button" class="btn btn-default btn-arbol" ng-click="homeCtrl.addProject(objO.idObjetivoOperativo)" id="addProjectButton-{{objO.idObjetivoOperativo}}">
-                                                            <i class="glyphicon glyphicon-plus" aria-hidden="true"></i> Agregar Proyecto
-                                                          </button>
-                                                        </div>
-                                                    <div>
+                                                    </div>
                                                 </div>
                                             </span>
+                                            <div ng-if="!$last" class="col-md-12 col-sm-12 col-xs-12 notPadding">
+                                                <hr class="noMargin">
+                                            </div>
 
                                             <!-- Inicio de Proyectos -->
 
-                                            <span ng-if="objO.proyectos.length > 0" id="grupo-level-2-{{objO.idObjetivoOperativo}}" class="collapse projectContent">
+                                            <span id="grupo-level-2-{{objO.idObjetivoOperativo}}" class="collapse projectContent">
                                                 <div class="columnRight">
                                                     <span class="title viewArbol">Proyectos</span>
+                                                    <button type="button" class="btn btn-default btnNew" ng-click="homeCtrl.addProject(objO.idObjetivoOperativo)" id="addProjectButton-{{objO.idObjetivoOperativo}}">
+                                                        <span>Nuevo</span>
+                                                        <div class="icNew" title="Nuevo"></div>
+                                                    </button>
                                                 </div>
-                                                <div class="contentDate">
-                                                    <span class="title left">Inicio</span>
-                                                    <span class="title left">Fin</span>
-                                                    <span class="title right">Estado</span>
-                                                </div>
-                                                <ul id="addproject">
-                                                    <li class="listProject" ng-repeat="proyecto in objO.proyectos | filter:homeCtrl.search.searchText.text">
-                                                        <span class="thirdLabel columnRight">
-                                                            <i class="glyphicon glyphicon-chevron-down collapsed" aria-hidden="true" data-toggle="collapse" href="#grupo-level-{{objO.idObjetivoOperativo}}-{{$index}}"></i> {{proyecto.nombre}}  <i class="glyphicon glyphicon-edit" aria-hidden="true" title="Editar" data-toggle="tooltip" ng-click="homeCtrl.editProject(proyecto.idProyecto)" data-placement="top" title="" data-original-title="Editar"></i>
-                                                        </span>
+                                                <span ng-if="objO.proyectos.length === 0">
+                                                    <div class="col-md-12 col-sm-12 col-xs-12 notPadding">
+                                                      <br>
+                                                      <div class="notificationEmptyProject">
+                                                           No existen proyectos para este objetivo operativo.
+                                                      </div>
+                                                    </div>
+                                                </span>
+                                                <div ng-if="objO.proyectos.length > 0">
+                                                  <div class="contentDate">
+                                                      <span class="title left">Inicio</span>
+                                                      <span class="title left">Fin</span>
+                                                      <span class="title">Estado</span>
+                                                  </div>
+                                                  <ul id="addproject">
+                                                      <li class="listProject" ng-repeat="proyecto in objO.proyectos | filter:homeCtrl.search.searchText.text">
+                                                          <span class="thirdLabel columnRight">
+                                                              <span class="nameObj" data-toggle="collapse" href="#grupo-level-{{objO.idObjetivoOperativo}}-{{$index}}">{{proyecto.nombre}}  </span>
+                                                              <span class="icEdit absoluteContent" aria-hidden="true" title="Editar" data-toggle="tooltip" ng-click="homeCtrl.editProject(proyecto.idProyecto)" data-placement="top" title="" data-original-title="Editar"></span>
+                                                          </span>
 
-                                                        <div class="box-date">
-                                                            <span class="date left">{{proyecto.fechaInicio | date:'MM/dd/yyyy'}}</span>
-                                                            <span class="date left">{{proyecto.fechaFin| date:'MM/dd/yyyy'}}</span>
-                                                            <span class="date right" ng-class="{'completoClass' : proyecto.estado === 'Completo', 'incompletoClass' : proyecto.estado === 'Incompleto', 'presentadoClass' : proyecto.estado === 'Presentado', 'verificadoClass' : proyecto.estado === 'Verificado', 'canceladoClass' : proyecto.estado === 'Cancelado', 'preAprobadoClass' : proyecto.estado === 'Pre aprobado', 'aprobadoClass' : proyecto.estado === 'Aprobado', 'aplazadoClass' : proyecto.estado === 'Aplazado', 'rechazadoClass' : proyecto.estado === 'Rechazado', 'enPriorizacionClass' : proyecto.estado === 'En Priorización'}">{{proyecto.estado}}</span>
-                                                        </div>
+                                                          <div class="box-date relativeContent">
+                                                              <span class="date left">{{proyecto.fechaInicio | date:'MM/dd/yyyy'}}</span>
+                                                              <span class="date left">{{proyecto.fechaFin| date:'MM/dd/yyyy'}}</span>
+                                                              <span class="estateClass" ng-class="{'completoClass' : proyecto.estado === 'Completo', 'incompletoClass' : proyecto.estado === 'Incompleto', 'presentadoClass' : proyecto.estado === 'Presentado', 'verificadoClass' : proyecto.estado === 'Verificado', 'canceladoClass' : proyecto.estado === 'Cancelado', 'preAprobadoClass' : proyecto.estado === 'Pre aprobado', 'aprobadoClass' : proyecto.estado === 'Aprobado', 'aplazadoClass' : proyecto.estado === 'Aplazado', 'rechazadoClass' : proyecto.estado === 'Rechazado', 'enPriorizacionClass' : proyecto.estado === 'En Priorización'}">{{proyecto.estado}}</span>
+                                                              <i class="img-chevron-down collapsed verticalCenter" aria-hidden="true" data-toggle="collapse" href="#grupo-level-{{objO.idObjetivoOperativo}}-{{$index}}"></i>
+                                                          </div>
 
-                                                        <div id="grupo-level-{{objO.idObjetivoOperativo}}-{{$index}}" class="col-md-12 collapse">
-                                                            <p class="description">"{{proyecto.descripcion}}"</p>
-                                                            <p class="description"><span>Meta:</span>({{proyecto.meta}}) {{proyecto.unidadMeta}}</p>
-                                                        </div>
-                                                        <div class="col-md-12 col-sm-12 col-xs-12 notPadding">
-                                                            <hr class="line-inner-proyect" id="proyecto-{{proyecto.idProyecto}}">
-                                                            <div ng-if="$last && objO.proyectos.length > 0"><br></div>
-                                                        </div>
-                                                    </li>
-                                                </ul>
-                                            </span>
-
-
-                                            <span ng-if="objO.proyectos.length === 0" id="grupo-level-2-{{objO.idObjetivoOperativo}}" class="collapse">
-                                                <div class="col-md-12 col-sm-12 col-xs-12 notPadding">
-                                                <br>
-                                                    <div class="alert alert-danger">
-                                                    <i class="glyphicon glyphicon-remove-sign" aria-hidden="true"></i>
-                                                     No existen proyectos para este objetivo operativo.</div>
+                                                          <div id="grupo-level-{{objO.idObjetivoOperativo}}-{{$index}}" class="col-md-12 collapse">
+                                                              <p class="description">"{{proyecto.descripcion}}"</p>
+                                                              <p class="description"><span>Meta:</span>({{proyecto.meta}}) {{proyecto.unidadMeta}}</p>
+                                                          </div>
+                                                          <div class="col-md-12 col-sm-12 col-xs-12 notPadding">
+                                                              <hr class="line-inner-proyect" id="proyecto-{{proyecto.idProyecto}}">
+                                                              <div ng-if="$last && objO.proyectos.length > 0"><br></div>
+                                                          </div>
+                                                      </li>
+                                                  </ul>
                                                 </div>
                                             </span>
 
