--- a/source/frontend/src/priorization/priorization.html
+++ b/source/frontend/src/priorization/priorization.html
@@ -1,11 +1,11 @@
 <div class="pageContanerCustom">
-  <div class="item page">
+  <div class="item page pagePriorizacion">
     <div class="row">
        <div class="col-md-12">
           <span class="title-year">Plan 2017</span>
         </div>
         <div class="col-md-12">
-          <hr>
+          <hr class="lineColor">
         </div>
       <div class="col-md-12">
           <p class="title">Resumen de proyectos</p>
@@ -27,11 +27,10 @@
           </div>
       </div>
       <div class="col-md-12">
-           <hr>
           <div class="principalBtn">
-            <button type="button" ng-disabled="priorizationCtrl.dataResult.EnPriorizacion === '0' && priorizationCtrl.dataResult.Verificado === '0' && priorizationCtrl.dataResult.Presentado === '0'" class="btn btn-default" ng-click="priorizationCtrl.downloadExcelPriorization()"><i class="glyphicon glyphicon-export" aria-hidden="true"></i> Descargar Excel de priorización</button>
-            <button type="button" class="btn btn-default" disabled><i class="glyphicon glyphicon-import" aria-hidden="true"></i> Importar proyectos</button>
-            <button type="button" class="btn btn-link" disabled>Cancelar priorización</button>
+            <button type="button" ng-disabled="priorizationCtrl.dataResult.EnPriorizacion === '0' && priorizationCtrl.dataResult.Verificado === '0' && priorizationCtrl.dataResult.Presentado === '0'" class="btn btn-default" ng-click="priorizationCtrl.downloadExcelPriorization()">Descargar Excel de priorización</button>
+            <button type="button" class="btn btn-default" disabled>Importar proyectos</button>
+            <button type="button" ng-disabled="priorizationCtrl.dataResult.EnPriorizacion === '0'" class="btn  btn-default right" ng-click="priorizationCtrl.cancelPriorization()">Cancelar priorización</button>
           </div>
        </div>
     </div>
