--- a/source/frontend/src/upload/preview/preview.html
+++ b/source/frontend/src/upload/preview/preview.html
@@ -1,5 +1,5 @@
 <div class="pageContanerCustom">
-  <div class="item page">
+  <div class="item page uploadImport">
     <div class="row">
       <div class="col-md-12">
         <span class="title-year">Plan 2017</span>
@@ -8,8 +8,8 @@
         <p class="title-import-excel">Importar Excel</p>
       </div>
       <div class="col-md-12">
-        <hr>
-        <span style="font-size: 14px; font-weight: bold;font-size:18px;">Paso 2 de 2 </span>
+        <hr class="lineColor">
+        <span class="titleProgress">Paso 2 de 2 </span>
         <div class="progress">
           <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width:100%">
           </div>
@@ -21,16 +21,17 @@
       <div class="col-md-12" style="margin-bottom: 20px;">
         <div ng-show="previewCtrl.newProjects.length > 0">
           <div class="contentDate" style="width: 100%; margin-top: 25px;">
-            <span style="float: left;font-size: 23px;" ng-show="previewCtrl.newProjects.length == 1">{{previewCtrl.newProjects.length}} proyecto nuevo</span>
-            <span style="float: left;font-size: 23px;" ng-show="previewCtrl.newProjects.length > 1">{{previewCtrl.newProjects.length}} proyectos nuevos</span>
+            <span class="previewProyect" ng-show="previewCtrl.newProjects.length == 1">{{previewCtrl.newProjects.length}} proyecto nuevo</span>
+            <span class="previewProyect" ng-show="previewCtrl.newProjects.length > 1">{{previewCtrl.newProjects.length}} proyectos nuevos</span>
             <p class="reference" style="float: left;clear: left;">Estas líneas se agregarán como nuevos proyectos en el sistema.<span class="opcional" style="font-weight:normal;">(No hay proyectos cargados previamente con esos códigos o nombres)</span></p>
+             <p class="title proyectList">PROYECTOS</p>
             <div class="contentDate">
                 <span class="title left">Inicio</span>
                 <span class="title left">Fin</span>
             </div>
           </div>
           <div class="col-md-12 notPadding">
-            <hr style="margin: 5px 0;">
+            <hr class="lineContentProyect">
           </div>
           <ul style="list-style: none;padding: 0;">
             <li class="col-md-12 notPadding" ng-repeat="project in previewCtrl.newProjects">
@@ -53,24 +54,24 @@
           </div> -->
         </div>
         <div ng-show="previewCtrl.existentProjects.length > 0">
-          <div>
-            <div class="contentDate" style="width: 100%; margin-top: 25px;">
-              <span style="float: left;font-size: 23px;" ng-show="previewCtrl.existentProjects.length == 1">{{previewCtrl.existentProjects.length}} proyecto existente</span>
-              <span style="float: left;font-size: 23px;" ng-show="previewCtrl.existentProjects.length > 1">{{previewCtrl.existentProjects.length}} proyectos existentes</span>
-              <p class="reference" style="float: left;clear: left;">Los códigos o nombres coinciden con proyectos cargados previamente en el sistema.<span class="opcional" style="font-weight:normal;"></span></p>
+          <div class="contentUploadImport">
+              <span class="previewProyect" ng-show="previewCtrl.existentProjects.length == 1">{{previewCtrl.existentProjects.length}} proyecto existente</span>
+              <span class="previewProyect" ng-show="previewCtrl.existentProjects.length > 1">{{previewCtrl.existentProjects.length}} proyectos existentes</span>
+              <p class="reference">Los códigos o nombres coinciden con proyectos cargados previamente en el sistema.<span class="opcional"></span></p>
+              <p class="title proyectList">PROYECTOS</p>
               <div class="contentDate">
                   <span class="title left">Inicio</span>
                   <span class="title left">Fin</span>
               </div>
-            </div>
             <div class="col-md-12 notPadding">
-              <hr style="margin: 5px 0;">
+              <hr class="lineContentProyect">
             </div>
             <ul style="list-style: none;padding: 0;">
               <li class="col-md-12 notPadding" ng-repeat="project in previewCtrl.existentProjects">
                 <div class="col-md-7 col-sm-6 col-xs-12 notPadding">
                   <span class="thirdLabel">{{project.nombreProyecto}}</span>
                 </div>
+
                 <div class="box-date">
                   <span class="titleMobile">Inicio: </span>
                   <span class="date left">{{project.fechaInicio | date:'MM/dd/yyyy'}}</span>
@@ -88,7 +89,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-12">
+      <div class="col-md-12" ng-show="previewCtrl.existentProjects.length > 0">
         <div class="form-group">
           <p>Seleccioná la acción que deseás hacer:</p>
           <div class="radio" ng-init="previewCtrl.pisarProyectos">
@@ -106,8 +107,8 @@
         </div>
       </div>
       <div class="col-md-12">
-        <button type="button" class="btn btn-default" ng-click="previewCtrl.submit()" ng-disabled="previewCtrl.submitBtnDisabled"><i class="glyphicon glyphicon-import" aria-hidden="true"></i>{{previewCtrl.submitBtnTxt | capitalize}}</button>
-        <button type="button" class="btn btn-link">Cancelar</button>
+        <button type="button" class="btn btn-success" ng-click="previewCtrl.submit()" ng-disabled="previewCtrl.submitBtnDisabled">{{previewCtrl.submitBtnTxt | capitalize}}</button>
+        <button type="button" class="btn btn-default right" ui-sref="upload">Cancelar</button>
       </div>
     </div>
   </div>
