--- a/source/frontend/src/upload/results/results.html
+++ b/source/frontend/src/upload/results/results.html
@@ -1,25 +1,40 @@
 <div class="pageContanerCustom">
-  <div class="item page">
+  <div class="item page resultImport">
     <div class="row">
       <div class="col-md-12">
         <span class="title-year">Plan 2017</span>
         <div class="dropdown menuExcel">
           <excelcomponent></excelcomponent>
         </div>
-        <button type="button" class="btn btn-default" style="float: right;" ui-sref="home.tree">Volver al listado completo</button>
+        <button type="button" class="btn btn-default right" ui-sref="home.tree">Volver al listado completo
+        </button>
       </div>
       <div class="col-md-12">
-        <span class="title-year">Reporte de la importación</span>
+        <p class="title-import-excel">Reporte de la importación</p>
+        <hr class="lineColor">
         <div ng-show="resultsCtrl.completedProjects.length > 0">
           <div class="contentDate" style="width: 100%; margin-top: 25px;">
-            <span style="float: left;font-size: 23px;" ng-show="resultsCtrl.completedProjects.length == 1">{{resultsCtrl.completedProjects.length}} proyecto nuevo importado al PGI</span>
-            <span style="float: left;font-size: 23px;" ng-show="resultsCtrl.completedProjects.length > 1">{{resultsCtrl.completedProjects.length}} proyectos nuevos importados al PGI</span>
-            <span class="title right" style="width: 90px;">Estado</span>
-            <span class="title right" style="width: 90px;">Fecha Fin</span>
-            <span class="title  right" style="width: 90px;">Fecha Inicio</span>
+            <p class="previewProyect" ng-show="resultsCtrl.completedProjects.length == 1">{{resultsCtrl.completedProjects.length}} proyecto nuevo importado al PIG</p>
+            <p class="previewProyect" ng-show="resultsCtrl.completedProjects.length > 1">{{resultsCtrl.completedProjects.length}} proyectos nuevos importados al PIG</p>
+            <div class="contentDate" style="width: 100%; margin-top: 25px;">
+                <div style="margin-bottom: 8px;font-size: 23px;">15 proyectos nuevos importados al PIG</div>
+                <div class="alert alert-success" role="alert">
+                <div class="alert-text">
+                  <i class="glyphicon glyphicon-ok-sign" aria-hidden="true"></i>
+                  <strong>Completo - </strong>Éstos proyectos se importaron exitosamente. Es necesario que los presentes para que la secretaría pueda verlos. Inlcuso una vez presentados, podrás seguir modificándolos hasta que la SECPECG los verifique.
+                </div>
+                <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Presentar todos los proyectos completos</button>
+              </div>
+              </div>
+            <p class="title proyectList">PROYECTOS</p>
+              <div class="contentDate">
+                  <span class="title left">Inicio</span>
+                  <span class="title left">Fin</span>
+                  <span class="title">Estado</span>
+              </div>
           </div>
           <div class="col-md-12 notPadding">
-            <hr style="margin: 5px 0;">
+            <hr class="lineContentProyect">
           </div>
           <ul style="list-style: none;padding: 0;">
             <li class="col-md-12 notPadding" ng-repeat="project in resultsCtrl.completedProjects">
@@ -31,9 +46,9 @@
                 <span class="date left">{{project.fechaInicio | date:'MM/dd/yyyy'}}</span>
                 <span class="titleMobile">Fin: </span>
                 <span class="date left">{{project.fechaFin | date:'MM/dd/yyyy'}}</span>
-                <span class="date right">{{project.estado}}</span>
+                   <span class="estateClass" ng-class="{'completoClass' : project.estado === 'Completo', 'incompletoClass' : project.estado === 'Incompleto', 'presentadoClass' : project.estado === 'Presentado', 'verificadoClass' : project.estado === 'Verificado', 'canceladoClass' : project.estado === 'Cancelado', 'preAprobadoClass' : project.estado === 'Pre aprobado', 'aprobadoClass' : project.estado === 'Aprobado', 'aplazadoClass' : project.estado === 'Aplazado', 'rechazadoClass' : project.estado === 'Rechazado', 'enPriorizacionClass' : project.estado === 'En Priorización'}">{{project.estado}}</span>
               </div>
-              <div class="col-md-12 col-sm-12 col-xs-12">
+              <div class="col-md-12 col-sm-12 col-xs-12 notPadding">
                 <hr class="line-inner-proyect">
               </div>
             </li>
@@ -44,11 +59,20 @@
         </div>
         <div ng-show="resultsCtrl.incompletedProjects.length > 0">
           <div class="contentDate" style="width: 100%; margin-top: 25px;">
-            <span style="float: left;font-size: 23px;" ng-show="resultsCtrl.incompletedProjects.length == 1">{{resultsCtrl.incompletedProjects.length}} proyecto importado con campos obligatorios incompletos</span>
-            <span style="float: left;font-size: 23px;" ng-show="resultsCtrl.incompletedProjects.length > 1">{{resultsCtrl.incompletedProjects.length}} proyectos importados con campos obligatorios incompletos</span>
-            <span class="title right" style="width: 90px;">Estado</span>
-            <span class="title right" style="width: 90px;">Fecha Fin</span>
-            <span class="title  right" style="width: 90px;">Fecha Inicio</span>
+            <p class="previewProyect" ng-show="resultsCtrl.incompletedProjects.length == 1">{{resultsCtrl.incompletedProjects.length}} proyecto importado con campos obligatorios incompletos</p>
+            <p class="previewProyect" ng-show="resultsCtrl.incompletedProjects.length > 1">{{resultsCtrl.incompletedProjects.length}} proyectos importados con campos obligatorios incompletos</p>
+            <div class="alert alert-warning" role="alert">
+                  <i class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></i>
+                  <strong>Incompleto - </strong> 
+                  Hay proyectos importados exitosamente que tienen datos incompletos. Volvé al listado para completarlos y presentarlos.
+                </div>
+
+            <p class="title proyectList">PROYECTOS</p>
+              <div class="contentDate">
+                  <span class="title left">Inicio</span>
+                  <span class="title left">Fin</span>
+                  <span class="title">Estado</span>
+              </div>
           </div>
           <div class="col-md-12 notPadding">
             <hr style="margin: 5px 0;">
@@ -63,9 +87,9 @@
                 <span class="date left">{{project.fechaInicio | date:'MM/dd/yyyy'}}</span>
                 <span class="titleMobile">Fin: </span>
                 <span class="date left">{{project.fechaFin | date:'MM/dd/yyyy'}}</span>
-                <span class="date right">{{project.estado}}</span>
+                   <span class="estateClass" ng-class="{'completoClass' : project.estado === 'Completo', 'incompletoClass' : project.estado === 'Incompleto', 'presentadoClass' : project.estado === 'Presentado', 'verificadoClass' : project.estado === 'Verificado', 'canceladoClass' : project.estado === 'Cancelado', 'preAprobadoClass' : project.estado === 'Pre aprobado', 'aprobadoClass' : project.estado === 'Aprobado', 'aplazadoClass' : project.estado === 'Aplazado', 'rechazadoClass' : project.estado === 'Rechazado', 'enPriorizacionClass' : project.estado === 'En Priorización'}">{{project.estado}}</span>
               </div>
-              <div class="col-md-12 col-sm-12 col-xs-12">
+              <div class="col-md-12 col-sm-12 col-xs-12 notPadding">
                 <hr class="line-inner-proyect">
               </div>
             </li>
@@ -76,11 +100,49 @@
         </div>
         <div ng-show="resultsCtrl.wrongProjects.length > 0">
           <div class="contentDate" style="width: 100%; margin-top: 25px;">
-            <span style="float: left;font-size: 23px;" ng-show="resultsCtrl.wrongProjects.length == 1">{{resultsCtrl.wrongProjects.length}} proyecto no importado</span>
-            <span style="float: left;font-size: 23px;" ng-show="resultsCtrl.wrongProjects.length > 1">{{resultsCtrl.wrongProjects.length}} proyectos no importados</span>
-            <span class="title right" style="width: 90px;">Estado</span>
-            <span class="title right" style="width: 90px;">Fecha Fin</span>
-            <span class="title  right" style="width: 90px;">Fecha Inicio</span>
+            <p class="previewProyect"  ng-show="resultsCtrl.wrongProjects.length == 1">{{resultsCtrl.wrongProjects.length}} proyecto no importado <button type="button" class="btn btn-default" ng-disabled="!resultsCtrl.results.nombreArchivoError" ng-click="resultsCtrl.downloadErrorsFile()">
+            <img src="../../../assets/icono-xls.png" style="width: 20px;float: left;"> Descargar proyectos no importados</img>
+          </button></p>
+            <p class="previewProyect"  ng-show="resultsCtrl.wrongProjects.length > 1">{{resultsCtrl.wrongProjects.length}} proyectos no importados <button type="button" class="btn btn-default" ng-disabled="!resultsCtrl.results.nombreArchivoError" ng-click="resultsCtrl.downloadErrorsFile()">
+            <img src="../../../assets/icono-xls.png" style="width: 20px;float: left;"> Descargar proyectos no importados</img>
+          </button></p>
+            <div class="alert alert-danger" role="alert">
+                    <i class="glyphicon glyphicon-remove-sign" aria-hidden="true"></i>
+                    <strong>No importado - </strong> 
+                   Descargá el archivo Excel y verificá la información y su formato. Una vez que lo hayas corregido probá importar el excel nuevamente.
+                   <div style="margin-top:15px;">
+                     <p>Los errores de los proyectos no importados pueden ser los siguientes:</p>
+                     <ul>
+                        <li style="margin-bottom:5px;">Obligatoriedad en los siguientes campos:
+                            <ul>
+                              <li>
+                                Nombre
+                              </li>
+                               <li>
+                                Objetivo Estratégico
+                              </li>
+                              <li>
+                                Objetivo Operativo
+                              </li>
+                              <li>
+                                Fecha de inicio
+                              </li>
+                              <li>
+                                Fecha de fin
+                              </li>
+                            </ul>  
+                        </li>
+                        <li style="margin-bottom:5px;">La fecha de inicio debe ser del año actual o posteriores</li>
+                        <li style="margin-bottom:5px;">la fecha de inicio debe ser menor a la fecha de fin</li>
+                     </ul>
+                   </div>
+                  </div>
+               <p class="title proyectList">PROYECTOS</p>
+              <div class="contentDate">
+                  <span class="title left">Inicio</span>
+                  <span class="title left">Fin</span>
+                  <span class="title">Estado</span>
+              </div>
           </div>
           <div class="col-md-12 notPadding">
             <hr style="margin: 5px 0;">
@@ -95,9 +157,9 @@
                 <span class="date left">{{project.fechaInicio | date:'MM/dd/yyyy'}}</span>
                 <span class="titleMobile">Fin: </span>
                 <span class="date left">{{project.fechaFin | date:'MM/dd/yyyy'}}</span>
-                <span class="date right">{{project.estado}}</span>
+               <span class="estateClass" ng-class="{'completoClass' : project.estado === 'Completo', 'incompletoClass' : project.estado === 'Incompleto', 'presentadoClass' : project.estado === 'Presentado', 'verificadoClass' : project.estado === 'Verificado', 'canceladoClass' : project.estado === 'Cancelado', 'preAprobadoClass' : project.estado === 'Pre aprobado', 'aprobadoClass' : project.estado === 'Aprobado', 'aplazadoClass' : project.estado === 'Aplazado', 'rechazadoClass' : project.estado === 'Rechazado', 'enPriorizacionClass' : project.estado === 'En Priorización'}">{{project.estado}}</span>
               </div>
-              <div class="col-md-12 col-sm-12 col-xs-12">
+              <div class="col-md-12 col-sm-12 col-xs-12 notPadding">
                 <hr class="line-inner-proyect">
               </div>
             </li>
@@ -107,9 +169,8 @@
         </div> -->
         </div>
         <div class="col-md-12 notPadding" style="margin-top:25px;">
-          <button type="button" class="btn btn-default" ng-disabled="!resultsCtrl.results.nombreArchivoError" ng-click="resultsCtrl.downloadErrorsFile()">
-            <img src="../../../assets/icono-xls.png" style="width: 20px;float: left;"> Descargar archivo Excel</img>
-          </button>
+          <button type="button" class="btn btn-default" ui-sref="home.tree">Volver al listado completo
+        </button>
         </div>
       </div>
     </div>
