--- a/source/frontend/src/upload/upload.html
+++ b/source/frontend/src/upload/upload.html
@@ -8,8 +8,8 @@
         <div class="row">
           <div class="col-md-12">
             <p class="title-import-excel">Importar Excel</p>
-              <hr>
-              <span style="font-size: 14px; font-weight: bold; font-size:18px;">Paso 1 de 2</span>
+              <hr class="lineColor">
+              <span class="titleProgress"">Paso 1 de 2</span>
               <div class="progress">
                 <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:50%">
                 </div>
@@ -19,9 +19,10 @@
               </div>
               <form name="fileform" ng-submit="uploadCtrl.submit(fileform)">
                   <input type="file" id="archivoAImportar">
-                  <hr>
-                    <button type="submit" class="btn btn-default">Continuar</button>
-                    <button type="button" class="btn btn-link" ui-sref="home.tree">Cancelar</button>
+                  <div class="content-first-btn">
+                    <button type="submit" class="btn btn-success">Continuar</button>
+                    <button type="button" class="btn btn-default right" ui-sref="home.tree">Cancelar</button>
+                  </div>
               </form>
           </div>
         </div>
