--- a/source/frontend/src/home/form-project.html
+++ b/source/frontend/src/home/form-project.html
@@ -285,7 +285,7 @@ Si el proyecto no tiene una ubicación definida aún o no impacta en ningún lug
                           </div>
                         </div>
                         <div class="checkbox">
-                            <label class="option" for="no-selection"><input ng-click="formCtrl.cleanCheckEjes()" type="checkbox" id="no-selection" name="noSelection" checked> No corresponde</label>
+                            <label class="option" for="no-selection"><input ng-click="formCtrl.cleanCheckEjes()" type="checkbox" id="no-selection" name="noSelection" ng-checked="formCtrl.ejesNoCorresponde"> No corresponde</label>
                         </div>
                     </div>
                     <div class="form-group">
