--- a/source/frontend/src/home/home.html
+++ b/source/frontend/src/home/home.html
@@ -10,7 +10,7 @@
                 <p class="register">No hay proyectos cargados a&uacute;n en el Plan 2017</p>
                 <div class="content-first-btn principalBtn">
                     <button type="button" class="btn btn-success" ui-sref="upload">Importar proyectos de Excel</button>
-                    <button type="button" class="btn btn-success" ui-sref="home.tree">Agregar proyectos en forma manual</button>
+                    <button type="button" class="btn btn-success" ui-sref="home.tree({fromState: 'home'})">Agregar proyectos en forma manual</button>
                 </div>
             </div>
         </div>
