--- a/source/frontend/src/upload/upload.html
+++ b/source/frontend/src/upload/upload.html
@@ -9,7 +9,7 @@
           <div class="col-md-12">
             <p class="title-import-excel">Importar Excel</p>
               <hr class="lineColor">
-              <span class="titleProgress"">Paso 1 de 2</span>
+              <span class="titleProgress">Paso 1 de 2</span>
               <div class="progress">
                 <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:50%">
                 </div>
