--- a/source/frontend/src/users/form-user/form-user.html
+++ b/source/frontend/src/users/form-user/form-user.html
@@ -1,6 +1,7 @@
 <div class="contentNewProyect">{{userFormCtrl.title}}</div>
 <div class="contentFormProyect admin">
   <div class="col-md-12 col-sm-12 col-xs-12">
+    <div id="notificationsUser"></div>
     <form role="form" ng-submit="userFormCtrl.submit()">
       <div class="col-md-12 col-sm-12 col-xs-12 agrupador form-group">
         <div class="row">
